<resources>
    <string name="app_name">BankConverter</string>


    <!--NOTIFICATION-->
    <string name="notification_load_title">Loading data</string>
    <string name="notification_started">Preparing for loading. Check internet connection...</string>
    <string name="notification_loading">Loading data</string>
    <string name="notification_saving">Saving data</string>
    <string name="notification_connection">Check internet connection!</string>
    <string name="notification_saving_unchangeable">Saving unchangeable data</string>
    <string name="notification_saving_organization">Saving organization</string>
    <string name="notification_saving_cities">Saving cities</string>
    <string name="notification_successful">Data successful synchronized</string>

    <!--ORGANIZATION LIST-->
    <string name="card_phone">Тел.: %1$s</string>
    <string name="card_address">Адрес : %1$s</string>


    <!--MENU-->
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_call">Позвонить</string>
    <string name="menu_site">Сайт</string>
    <string name="menu_map">Карта</string>

    <!--DETAIL-->
    <string name="detail_site_title">Официальный сайт банка:</string>
    <string name="detail_curr_name">Название валюты</string>
    <string name="detail_address">Адрес: %1$s</string>
    <string name="detail_city">Город: %1$s</string>
    <string name="detail_region">Регион: %1$s</string>
    <string name="detail_phone">Телефон: %1$s</string>

    <!--DIALOG-->
    <string name="dialog_share">SHARE</string>
    <string name="intent_share_image">Share Image</string>
    <string name="INTENT_TYPE">image/png</string>

</resources>
